--- a/install/install.html
+++ b/install/install.html
@@ -3,18 +3,35 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Todoyo Installation</title>
+<style type="text/css">
+body {
+	font-family:"Courier New", Courier, monospace;
+	color:#000000;
+	background-color:#E3EACE;
+	font-size:13px;
+}
+li {
+	margin-bottom:5px;
+}
+a {
+	font-weight:bold;
+	color:#0066CC;
+}
+</style>
 </head>
 
 <body>
 <h1>Todoyu Installation</h1>
+<p>Info for <strong>SVN users</strong>: You only have to do step 3 and 5!</p>
 <ol>
-  <li>Upload the todoyu folder to your server into your prefered directory (ex: www.yourdomain.com/todoyu)</li>
-  <li>Create a new mysql database for todoyu (todoyu will delete existing todoyu tables in this database!)</li>
-  <li>Download and add external tools which are needed by todoyu
+  <li><strong>Download</strong> the latest version from Sourceforge (<a href="http://sourceforge.net/projects/todoyu/" target="_blank">http://sourceforge.net/projects/todoyu/</a>)</li>
+  <li><strong>Extract</strong> the archive and <strong>upload</strong> the todoyu folder into the document root of your webserver. It has to be accessable for you browser (ex: www.example.com/todoyu)</li>
+  <li><strong>Create a new MySQL database</strong> for todoyu (the installer will remove existing todoyu tables in this database)</li>
+  <li><strong>Download</strong> and add <strong>external tools</strong> which are needed by todoyu
     <ol>
       <li>TinyMCE<br />
         <a href="http://tinymce.moxiecode.com/download.php" target="_blank">http://tinymce.moxiecode.com/download.php</a> (Main package)<br />
-Copy the "tiny_mce" folder into the todoyu/lib/js/ folder</li>
+        Copy the "tiny_mce" folder into the todoyu/lib/js/ folder</li>
       <li>phpMailer<br />
         <a href="http://sourceforge.net/projects/phpmailer/" target="_blank">http://sourceforge.net/projects/phpmailer/</a><br />
         Copy the content of the archive into todoyu/lib/php/phpmailer</li>
@@ -23,7 +40,7 @@ Copy the "tiny_mce" folder into the todoyu/lib/js/ folder</li>
         Copy the content of the archiv info todoyu/lib/js/jscalendar</li>
     </ol>
   </li>
-  <li>Call www.yourdomain.com/todoyu/install for the finishing steps</li>
+  <li>Call www.example.com/todoyu/install to<strong> start the installer </strong>and finish the installtion (Start installer: <a href="index.php">/install</a>)</li>
 </ol>
 <p>&nbsp;	</p>
 </body>
