* fixed bug in task edit form worktype labels rendering * various minor cleanups

--- a/lib/js/prototype-window/documentation/documentation.html
+++ b/lib/js/prototype-window/documentation/documentation.html
@@ -355,7 +355,7 @@
             <tr><td class="key">cancelLabel</td>        <td class="default">Cancel</td> <td class="detail">Cancel button label </td></tr>
             <tr><td class="key">onOk</td>            <td class="default">none</td> <td class="detail">Ok callback function called on ok button</td></tr>
             <tr><td class="key">onCancel</td>        <td class="default">none</td> <td class="detail">Cancel callback function called on ok button </td></tr>
-            <tr><td class="key">buttonClass</td>        <td class="default">none</td> <td class="detail">Ok/Cancel button css class name </td></tr>
+            <tr><td class="key">buttonClass</td>        <td class="default">none</td> <td class="detail">Ok/Cancel button CSS class name </td></tr>
             <tr><td class="key">All window parameters</td>        <td class="default">none</td> <td class="detail">Add all window constructor options  </td></tr>
           </table>
         </span>
@@ -382,7 +382,7 @@
             <tr><td class="key">left</td>            <td class="default">null</td> <td class="detail">Left position </td></tr>
             <tr><td class="key">okLabel</td>            <td class="default">Ok</td> <td class="detail">Ok button label </td></tr>
             <tr><td class="key">onOk</td>            <td class="default">none</td> <td class="detail">Ok callback function called on ok button</td></tr>
-            <tr><td class="key">buttonClass</td>        <td class="default">none</td> <td class="detail">Ok/Cancel button css class name </td></tr>
+            <tr><td class="key">buttonClass</td>        <td class="default">none</td> <td class="detail">Ok/Cancel button CSS class name </td></tr>
             <tr><td class="key">All window parameters</td>        <td class="default">none</td> <td class="detail">Add all window constructor options  </td></tr>
           </table>
         </span>
@@ -407,7 +407,7 @@
             <tr><th>Key</th>   <th>Default</th> <th>Description </th></tr>
             <tr><td class="key">top</td>            <td class="default">null</td> <td class="detail">Top position </td></tr>
             <tr><td class="key">left</td>            <td class="default">null</td> <td class="detail">Left position </td></tr>
-            <tr><td class="key">showProgress</td>            <td class="default">false</td> <td class="detail">Add a progress image (info found in the css file) </td></tr>
+            <tr><td class="key">showProgress</td>            <td class="default">false</td> <td class="detail">Add a progress image (info found in the CSS file) </td></tr>
             <tr><td class="key">All window parameters</td>        <td class="default">none</td> <td class="detail">Add all window constructor options  </td></tr>
           </table>
         </span>
