--- a/install/install.html
+++ b/install/install.html
@@ -26,21 +26,7 @@ a {
 <ol>
   <li><strong>Download</strong> the latest version from Sourceforge (<a href="http://sourceforge.net/projects/todoyu/" target="_blank">http://sourceforge.net/projects/todoyu/</a>)</li>
   <li><strong>Extract</strong> the archive and <strong>upload</strong> the todoyu folder into the document root of your webserver. It has to be accessable for you browser (ex: www.example.com/todoyu)</li>
-  <li><strong>Create a new MySQL database</strong> for todoyu (the installer will remove existing todoyu tables in this database)</li>
-  <li><strong>Download</strong> and add <strong>external tools</strong> which are needed by todoyu
-    <ol>
-      <li>TinyMCE<br />
-        <a href="http://tinymce.moxiecode.com/download.php" target="_blank">http://tinymce.moxiecode.com/download.php</a> (Main package)<br />
-        Copy the "tiny_mce" folder into the todoyu/lib/js/ folder</li>
-      <li>phpMailer<br />
-        <a href="http://sourceforge.net/projects/phpmailer/" target="_blank">http://sourceforge.net/projects/phpmailer/</a><br />
-        Copy the content of the archive into todoyu/lib/php/phpmailer</li>
-      <li>jsCalendar<br />
-        <a href="http://www.dynarch.com/static/jscalendar-1.0.zip" target="_blank">http://www.dynarch.com/static/jscalendar-1.0.zip</a><br />
-        Copy the content of the archiv info todoyu/lib/js/jscalendar</li>
-    </ol>
-  </li>
-  <li>Call www.example.com/todoyu/install to<strong> start the installer </strong>and finish the installtion (Start installer: <a href="index.php">/install</a>)	</li>
+  <li>Open www.example.com<strong>/todoyu</strong>, the <strong>installer will start automaticly</strong></li>
 </ol>
 </body>
 </html>
