* Added js redirect for browsers which ignore meta refresh

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <meta http-equiv="pragma" content="no-cache">
 <title>Todoyu</title>
 </head>
-<body>
+<body onload="window.location.href='install/'">
 </body>
 </html>
