* implemented administrator account input, validation and creation in installer (first-, lastname, email, companyname)

--- a/install/install.html
+++ b/install/install.html
@@ -7,7 +7,7 @@
 body {
 	font-family:"Courier New", Courier, monospace;
 	color:#000000;
-	background-color:#E3EACE;
+	background-color:#E3Eace;
 	font-size:13px;
 }
 li {
@@ -15,7 +15,7 @@ li {
 }
 a {
 	font-weight:bold;
-	color:#0066CC;
+	color:#0066cc;
 }
 </style>
 </head>
