--- a/install/install.html
+++ b/install/install.html
@@ -6,8 +6,8 @@
 <style type="text/css">
 body {
 	font-family:"Courier New", Courier, monospace;
-	color:#000000;
-	background-color:#E3Eace;
+	color:#000;
+	background-color:#e3eace;
 	font-size:13px;
 }
 li {
