* added proper file-extension to all selenium-IDE test cases and suites

--- a/core/test/selenium/index.html
+++ b/core/test/selenium/index.html
@@ -8,10 +8,10 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="../../../ext/loginpage/test/selenium/loginpage_login-to-portal">loginpage > login to portal</a></td></tr>
-<tr><td><a href="portal_headlet-about">portal > headlet: about</a></td></tr>
-<tr><td><a href="portal_headlet-quickcreate">portal > headlet: quickcreate</a></td></tr>
-<tr><td><a href="../../../ext/loginpage/test/selenium/headlet_logout">headlet: logout</a></td></tr>
+<tr><td><a href="../../../ext/loginpage/test/selenium/loginpage_login-to-portal.html">loginpage > login to portal</a></td></tr>
+<tr><td><a href="portal_headlet-about.html">portal > headlet: about</a></td></tr>
+<tr><td><a href="portal_headlet-quickcreate.html">portal > headlet: quickcreate</a></td></tr>
+<tr><td><a href="../../../ext/loginpage/test/selenium/headlet_logout.html">headlet: logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
