--- a/core/test/selenium/index.html
+++ b/core/test/selenium/index.html
@@ -10,6 +10,7 @@
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="../../../ext/loginpage/test/selenium/loginpage_login-to-portal.html">loginpage > login to portal</a></td></tr>
 <tr><td><a href="portal_headlet-about.html">portal > headlet: about</a></td></tr>
+<tr><td><a href="portal_quicktask-durationpicker.html">portal > quicktask - duration picker working?</a></td></tr>
 <tr><td><a href="portal_headlet-quickcreate.html">portal > headlet: quickcreate</a></td></tr>
 <tr><td><a href="../../../ext/loginpage/test/selenium/headlet_logout.html">headlet: logout</a></td></tr>
 </tbody></table>
