--- a/core/test/selenium/portal_headlet-about.html
+++ b/core/test/selenium/portal_headlet-about.html
@@ -101,6 +101,11 @@
 </tr>
 <!--close popup-->
 <tr>
+	<td>pause</td>
+	<td>500</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>css=div#popup-about.dialog div#popup-about_close.dialog_close</td>
 	<td></td>
