* Fix for selenium test (remove bookmark in contextmenu present)

--- a/core/test/selenium/portal_task-contextmenu-present.html
+++ b/core/test/selenium/portal_task-contextmenu-present.html
@@ -86,7 +86,7 @@
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>css=li#contextmenu-addbookmark a.task-bookmark</td>
+	<td>css=li#contextmenu-removebookmark a.task-bookmark</td>
 	<td></td>
 </tr>
 <tr>
