--- a/core/test/selenium/portal_quicktask-project-autocompleter.html
+++ b/core/test/selenium/portal_quicktask-project-autocompleter.html
@@ -11,6 +11,11 @@
 <tr><td rowspan="1" colspan="3">portal > quicktask - project AC</td></tr>
 </thead><tbody>
 <!------ portal > quicktask company AC-->
+<tr>
+	<td>assertElementNotPresent</td>
+	<td>//form[@id=&quot;quicktask-0-form&quot;]</td>
+	<td></td>
+</tr>
 <!--open quicktask popup-->
 <tr>
 	<td>assertElementPresent</td>
@@ -35,6 +40,11 @@
 <tr>
 	<td>assertElementPresent</td>
 	<td>css=div#quicktask.dialog</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertElementPresent</td>
+	<td>//form[@id=&quot;quicktask-0-form&quot;]</td>
 	<td></td>
 </tr>
 <!--test project AC-->
@@ -276,6 +286,7 @@
 	<td>css=div#quicktask-0-field-id-project-suggest.acResultContainer</td>
 	<td></td>
 </tr>
+<!--Select from AC-->
 <tr>
 	<td>click</td>
 	<td>//*[@id=&quot;quicktask-0-field-id-project-suggest&quot;]/ul/li[1]</td>
@@ -312,7 +323,12 @@
 	<td>selenium.browserbot.getUserWindow().Ajax.activeRequestCount == 0</td>
 	<td>10000</td>
 </tr>
-
+<!--Popup gone?-->
+<tr>
+	<td>assertElementNotPresent</td>
+	<td>//form[@id=&quot;quicktask-0-form&quot;]</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
