--- a/install/install.html
+++ b/install/install.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Todoyo Installation</title>
+<title>todoyo Installation</title>
 <style type="text/css">
 body {
 	font-family:"Courier New", Courier, monospace;
@@ -21,7 +21,7 @@ a {
 </head>
 
 <body>
-<h1>Todoyu Installation</h1>
+<h1>todoyu Installation</h1>
 <p>Info for <strong>SVN users</strong>: You only have to do step 3 and 5!</p>
 <ol>
   <li><strong>Download</strong> the latest version from Sourceforge (<a href="http://sourceforge.net/projects/todoyu/" target="_blank">http://sourceforge.net/projects/todoyu/</a>)</li>
